# hybrid-quantum-neural-network

./: .gitignore  5-fold-cv-test.py  README.md  aggregate_seed_results.py  circle-full-experiment-arch.ipynb  circuit.py  classical.py  collect_tables.py  final-plots.py  fingers-full-experiment-arch-hardware.ipynb  main.py  moons-full-experiment-arch.ipynb  plots.py  preprint.tex  pyproject.toml  quantum.py  requirements.txt  run_stat_tests.py  thesis_plots.py
benchmark/: __init__.py  ablation.py  config.py  data.py  engine.py  noise.py  stats.py
fragments/: 5-fold-cv-test.py  aggregate_seed_results.py  collect_tables.py  final-plots.py  quantum.py  run_stat_tests.py  thesis-plots.py
models/: __init__.py  classical_models.py  datasets.py  quantum_models.py  svm_models.py
notebooks/: fingers-full-experiment-arch-hardware.ipynb  iris-full-experiment-arch.ipynb
results/: classical_results_42.csv  classical_results_43.csv  classical_results_44.csv  classical_results_45.csv  classical_results_46.csv  classical_results_47.csv  classical_results_48.csv  classical_results_49.csv  classical_results_50.csv  classical_results_51.csv  classical_results_52.csv  classical_results_53.csv  classical_results_54.csv  classical_results_55.csv  classical_results_56.csv  classical_results_57.csv  classical_results_58.csv  classical_results_59.csv  classical_results_60.csv  classical_results_61.csv  classical_results_seed_summary.csv  quantum_results_42.csv  quantum_results_43.csv  quantum_results_44.csv  quantum_results_45.csv  quantum_results_46.csv  quantum_results_47.csv  (+15 more)
(+3 files in other folders)
